Add additional tests on observable collections